# emotiv-stream-team

./: Makefile  Makefile.in  README.md  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  emotiv-stream-team.in
src/streamteam/: Makefile  Makefile.am  Makefile.in  streamteam.py
